Fix z-index value for section block in debug.css

--- a/src/_includes/css/debug.css
+++ b/src/_includes/css/debug.css
@@ -1,6 +1,7 @@
 section.block[type] {
 	position: relative;
 	outline:1px solid #666;
+	z-index: -1;
 }
 section.block[type]::before {
 	content: "🧩 section_" attr(type) ".njk";
